style(mode/display): ensure event table doesnt get too tall

--- a/www/ui/templates/display-entry.css
+++ b/www/ui/templates/display-entry.css
@@ -193,6 +193,7 @@
     #event-table-area {
         gap: 10px;
         overflow: auto auto;
+        max-height: 30cqb;
     }
 
     #header-subtitle {
